Changed defualt postion, added info to popup, changed version number, added zip release
Final commit for now

--- a/popup.html
+++ b/popup.html
@@ -61,11 +61,15 @@
 
   <button id="reset">Reset to Defaults</button>
 
-  <div class="info">
-    <strong>Info</strong><br>
-    <a href="https://github.com/mariomaaren/Verlanglijst.online-Rekenmachine/" target="_blank" rel="noopener">GitHub</a><br>
-    Version: 2.2.0
-  </div>
+ <div class="info">
+  <div><strong>Info</strong></div>
+  <div><a href="https://github.com/mariomaaren/Verlanglijst.online-Rekenmachine/" target="_blank" rel="noopener">GitHub</a></div>
+  <div>Version: 2.2.1</div>
+  <div>Email: <a href="mailto:maaren.aurich.3000@proton.me">maaren.aurich.3000@proton.me</a></div>
+  <div>Discord: @Mrapfelduck</div>
+  <div><a href="https://addons.mozilla.org/en-US/firefox/addon/verlanglijst-online-totaalsom/" target="_blank" rel="noopener">Firefox Plugin Page</a></div>
+  <div>Contact me if you need help or have suggestions.</div>
+</div>
 
   <script src="colorWheel.js"></script>
   <script src="popup.js"></script>
